Move first draw outside of window.onload to avoid delay.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<path id="ring" fill="#76B13C" />
 				<circle cx="100" cy="100" r="82" fill="#F7F6F4" />
 				<circle cx="100" cy="100" r="73" fill="none" stroke="#76B13C" stroke-width="7" opacity=".5" />
-				<text x="100" y="100" text-anchor="middle" dominant-baseline="central" fill="#76B13C" font-size="60" font-weight="bold" />
+				<text x="100" y="100" text-anchor="middle" dominant-baseline="central" fill="#76B13C" font-size="60" font-weight="bold">64</text>
 			</svg>
 
 			<input type="range" value="64" />
