--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!doctype html>
 <html>
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="utf-8"/>
 		<title>Ring Progress Bar</title>
-		<link rel="stylesheet" href="http://leanlinares.s3-website-us-east-1.amazonaws.com/shared.css" />
+        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600"/>
 		<link rel="stylesheet" href="ring.css" />
 	</head>
 	<body>
-		<header>
-			<h1>Ring Progress Bar</h1>
-			<p>Handling an SVG path to get a wheel indicator.</p>
-		</header>
+		<h1>Ring Progress Bar</h1>
+		<p>Handling an SVG path to get a wheel indicator.</p>
 
 		<div class="display">
 			<svg>
@@ -23,9 +21,9 @@
 			<input type="range" value="64" />
 		</div>
 
-		<footer>
-			<p>Experiment by Leandro Linares @lean8086</p>
-		</footer>
+		<aside>
+			<p>Experiment by <a href="http://leanlinares.me">Leandro Linares</a></p>
+		</aside>
 
 		<a href="https://github.com/llinares/ring-progress-bar" target="_blank">
 			<img src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" class="gh-ribbon" />
