--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
         <meta charset="utf-8"/>
         <title>Ring Progress Bar</title>
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600"/>
-        <link rel="stylesheet" href="ring.css" />
+        <link rel="stylesheet" href="ring.css"/>
     </head>
     <body>
-        <h1>Ring Progress Bar</h1>
-        <p>Handling an SVG path to get a wheel indicator.</p>
+        <header>
+            <h1>Ring Progress Bar</h1>
+            <p>Handling an SVG path to get a wheel indicator.</p>
+        </header>
 
-        <div class="display">
+        <section>
             <svg>
                 <path id="ring" fill="#76B13C" />
                 <circle cx="100" cy="100" r="82" fill="#F7F6F4" />
@@ -19,14 +21,12 @@
             </svg>
 
             <input type="range" value="64" />
-        </div>
+        </section>
 
-        <aside>
-            <p>Experiment by <a href="http://leanlinares.me">Leandro Linares</a></p>
-        </aside>
+        <footer>Experiment by <a href="http://leanlinares.me">Leandro Linares</a></footer>
 
-        <a href="https://github.com/llinares/ring-progress-bar" target="_blank">
-            <img src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" class="gh-ribbon" />
+        <a href="https://github.com/llinares/ring-progress-bar" target="_blank" rel="external">
+            <img src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" id="gh-ribbon"/>
         </a>
 
         <script src="ring.js"></script>
